fix: image overflowing :rocket:

--- a/website/style.css
+++ b/website/style.css
@@ -1,4 +1,6 @@
 :root {
+  color-scheme: dark;
+
   --a-clr-primary-50: 255 209 209;
   --a-clr-primary-100: 255 154 154;
   --a-clr-primary-200: 250 128 114;
@@ -23,8 +25,8 @@
 
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
@@ -38,7 +40,6 @@ body {
 img {
   max-inline-size: 100%;
   block-size: auto;
-  object-fit: contain;
 }
 
 figure > figcaption {
@@ -259,13 +260,15 @@ nav ul li span {
   text-align: center;
   position: sticky;
   top: 6rem;
-  max-height: calc(100vh - 6rem - 50px);
+  max-height: calc(100vh - 6rem - 40px);
   border: 1px solid var(--clr-primary-300);
   border-radius: 0.375rem;
 }
 
-.bio-side img {
-  aspect-ratio: 2/1;
+.bio-side figure {
+  max-width: 80%;
+  border-radius: 0.4rem;
+  overflow: hidden;
 }
 
 .bio-img {
